add roomId
