# game-plugins-service/src/main/java/ru/nsu/burym/game_plugins_service/controller/GameController.java
@@ -30,7 +30,7 @@ public class GameController {
     @PostMapping("/create")
     public ResponseEntity<String> createGameInstance(@RequestBody CreateInfo createInfo) {
         try {
-            String containerId = gameInfoService.createGameInstance(createInfo.id(), "nothing");
+            String containerId = gameInfoService.createGameInstance(createInfo.gameId(), createInfo.roomId());
             return ResponseEntity.ok(containerId);
         } catch (IllegalArgumentException e) {
             return ResponseEntity.badRequest().body(e.getMessage());
