# game-plugins-service/src/main/java/ru/nsu/burym/game_plugins_service/jsonmodel/request/CreateInfo.java
@@ -1,4 +1,4 @@
 package ru.nsu.burym.game_plugins_service.jsonmodel.request;
 
-public record CreateInfo(int id) {
+public record CreateInfo(int gameId, long roomId) {
 }
